[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["nvLast86 <n.lastenko@gmail.com>"]
readme = "README.md"
packages = [{include = "postgres_homeworks"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
